--- a/_includes/education.html
+++ b/_includes/education.html
@@ -9,8 +9,8 @@
 
     {% for graduation in education.info %}
     <div class="item">
-      <h4 class="degree">{{ graduation.degree }}</h4>
-      <h5 class="meta">{{ graduation.university }}</h5>
+      <h4 class="meta">{{ graduation.university }}</h4>
+      <h5 class="degree">{{ graduation.degree }}</h5>
       <div class="time">{{ graduation.time }}</div>
     </div><!--//item-->
     {% endfor %}
@@ -33,11 +33,11 @@
       <div class="meta">
 
         <div class="upper-row">
-          <h3 class="degree">{{ graduation.degree }}</h3>
+          <h3 class="university">{{ graduation.university }}</h3>
           <div class="time">{{ graduation.time }}</div>
         </div><!--//upper-row-->
 
-        <div class="university">{{ graduation.university }}</div>
+        <div class="degree">{{ graduation.degree }}</div>
       </div><!--//meta-->
 
       {% if graduation.details %}
