--- a/_includes/education.html
+++ b/_includes/education.html
@@ -9,7 +9,7 @@
 
     {% for graduation in education.info %}
     <div class="item">
-      <h4 class="meta">{{ graduation.university }}</h4>
+      <h4 class="degree">{{ graduation.university }}</h4>
       <h5 class="degree">{{ graduation.degree }}</h5>
       <div class="time">{{ graduation.time }}</div>
       <div class="details">
