--- a/_includes/education.html
+++ b/_includes/education.html
@@ -36,11 +36,11 @@
       <div class="meta">
 
         <div class="upper-row">
-          <h3 class="university">{{ graduation.university }}</h3>
+          <h3 class="degree">{{ graduation.university }}</h3>
           <div class="time">{{ graduation.time }}</div>
         </div><!--//upper-row-->
 
-        <div class="degree">{{ graduation.degree }}</div>
+        <div class="university">{{ graduation.degree }}</div>
       </div><!--//meta-->
 
       {% if graduation.details %}
