--- a/_includes/education.html
+++ b/_includes/education.html
@@ -30,38 +30,15 @@
       {{ education.title }}
     </h2>
 
-    {% for experience in experiences.info %}
-    <div class="item">
-  
-      <div class="meta">
-  
-        <div class="upper-row">
-          <h3 class="job-title">{{ experience.role }}</h3>
-          <div class="time">{{ experience.time }}</div>
-        </div><!--//upper-row-->
-  
-        <div class="company">{{ experience.company }}</div>
-  
-      </div><!--//meta-->
-  
-      {% if experience.details %}
-      <div class="details">
-        {{ experience.details | markdownify }}
-      </div><!--//details-->
-      {% endif %}
-    </div><!--//item-->
-
     {% for graduation in education.info %}
     <div class="item">
-
       <div class="meta">
-
         <div class="upper-row">
           <h3 class="job-title">{{ graduation.university }}</h3>
           <div class="time">{{ graduation.time }}</div>
         </div><!--//upper-row-->
 
-        <div class="company">{{ graduation.degree }}</div>
+        <div class="university">{{ graduation.degree }}</div>
       </div><!--//meta-->
 
       {% if graduation.details %}
