--- a/_includes/education.html
+++ b/_includes/education.html
@@ -34,11 +34,11 @@
     <div class="item">
       <div class="meta">
         <div class="upper-row">
-          <h3 class="job-title">{{ graduation.university }}</h3>
+          <h3 class="degree">{{ graduation.university }}</h3>
           <div class="time">{{ graduation.time }}</div>
         </div><!--//upper-row-->
 
-        <div class="university">{{ graduation.degree }}</div>
+        <div class="degree">{{ graduation.degree }}</div>
       </div><!--//meta-->
 
       {% if graduation.details %}
