--- a/_includes/education.html
+++ b/_includes/education.html
@@ -38,7 +38,7 @@
           <div class="time">{{ graduation.time }}</div>
         </div><!--//upper-row-->
 
-        <div class="degree">{{ graduation.degree }}</div>
+        <div class="university">{{ graduation.degree }}</div>
       </div><!--//meta-->
 
       {% if graduation.details %}
